fix scrollbar and close logic

--- a/src/app/components/annotation-tools/search-panel/search-panel.component.scss
+++ b/src/app/components/annotation-tools/search-panel/search-panel.component.scss
@@ -147,6 +147,7 @@
     .match-list {
         overflow-y: auto;
         overflow-x: hidden;
+        scrollbar-width: thin;
         height: 100%;
 
         .page-match {
